--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Saswata Dutta
 logo: /assets/img/SaswataD.jpg
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description: Seasoned Data professional
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
